@@ -4242,6 +4242,27 @@ password=P@ssW0rd!
         </table>
         </div>
 
+        <h3>Properties Passed to the Builders</h3>
+
+        <p>In addition to the standard CruiseControl <a href="#buildproperties">
+        properties passed to builders</a>, &lt;svn&gt; sets the
+        following properties:</p>
+
+        <table class="documentation">
+            <thead>
+            <tr>
+                <th>Property Name</th>
+                <th>Description</th>
+            </tr>
+            </thead>
+            <tbody>
+            <tr>
+                <td>svnrevision</td>
+                <td>The repository revision number</td>
+            </tr>
+            </tbody>
+        </table>
+        </div>
         <div class="elementdocumentation">
         <a class="toplink" href="#top">top</a>
         <h2><a name="timebuild">&lt;timebuild&gt;</a></h2>
